--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                 <button
                 class="mobile-menu__close js-close-menu"
                 type="button"
-                aria-expanded="false">
+                aria-expanded="false"
+                aria-controls="menu">
                 <svg class="menu-icon" width="19" height="19" aria-label="Меню">
                     <use class="menu-close" href="./img/icon.svg#icon-close_24px-1"></use>
                 </svg>
             </button>
-            </div>
                 <nav class="nav">
                     <ul class="nav__list">
                         <li class="nav__item">
@@ -52,7 +52,7 @@
                 </nav>
                 <ul class="contact">
                     <li class="contact__item">
-                        <a href="mailto:info@example.com" class="contact__link--current">
+                        <a href="mailto:info@example.com" class="contact__link contact__link-text">
                             <svg class="contact__icon" width="16" height="12">
                               <use href="./img/icon.svg#icon-envelope"></use>
                             </svg>
@@ -85,7 +85,7 @@
                 </li>
                 </ul>
             </div>
-        
+        </div>
     </header>
     <main>
         <section class="hero overlay">
