--- a/index.html
+++ b/index.html
@@ -506,8 +506,8 @@
             </ul>
         </div>
         <div class="subscribe">
-    <h3 class="network__title">Подпишитесь на рассылку</h3>
-    <form class="footer__form">
+    <h3 class="subscribe__title">Подпишитесь на рассылку</h3>
+    <form class="subscribe__form">
         <label for="mail">
             <input
             class="subscribe__mail"
@@ -532,7 +532,7 @@
     <div data-modal class="backdrop is-hidden">
         <div class="modal">
             <button data-modal-close class="modal__close"  type="button">
-            <svg class="close-icon" width="18" height="18">
+            <svg class="close-icon" width="11" height="11">
                 <use href="./img/icon.svg#icon-close-black-18dp-2-1-1"></use>
             </svg>
             </button>
