--- a/portfolio.html
+++ b/portfolio.html
@@ -16,41 +16,69 @@
 </head>
 
 <body>
-<header class="page-header">
+<header class="header">
     <div class="container header__content">
         <a href="./index.html" class="header__logo">
-            Web<span class="logo__second">Studio</span>
+            Web<span class="logo__dark">Studio</span>
         </a>
-        <nav class="nav">
-            <ul class="nav__list">
-                <li class="nav__item">
-                    <a href="./index.html" class="nav__link">Студия</a>
+        <button class="menu-button js-open-menu" type="button" aria-expanded="false">
+            <svg class="menu-icon" width="24" height="16" aria-label="Меню">
+                <use href="./img/icon.svg#icon-menu_mob-1-1"></use>
+            </svg>
+        </button>
+        <div class="mobile-menu js-menu-container">
+            <button class="mobile-menu__close js-close-menu" type="button" aria-expanded="false" aria-controls="menu">
+                <svg class="menu-icon" width="19" height="19" aria-label="Меню">
+                    <use class="menu-close" href="./img/icon.svg#icon-close_24px-1"></use>
+                </svg>
+            </button>
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="./index.html" class="nav__link">Студия</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="./portfolio.html" class="nav__link nav__link--current">Портфолио</a>
+                    </li>
+                    <li class="nav__item"><a href="" class="nav__link">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="contact">
+                <li class="contact__item">
+                    <a href="mailto:info@example.com" class="contact__link contact__link-text">
+                        <svg class="contact__icon" width="16" height="12">
+                            <use href="./img/icon.svg#icon-envelope"></use>
+                        </svg>
+                        info@example.com
+                    </a>
                 </li>
-                <li class="nav__item">
-                    <a href="./portfolio.html" class="nav__link--current">Портфолио</a>
+                <li class="contact__item">
+                    <a href="tel:+380961111111" class="contact__link">
+                        <svg class="contact__icon" width="10" height="16">
+                            <use href="./img/icon.svg#icon-smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11</a>
                 </li>
-                <li class="nav__item"><a href="" class="nav__link">Контакты</a></li>
             </ul>
-        </nav>
-        <ul class="contact">
-            <li class="contact__item">
-                <a href="mailto:info@example.com" class="contact__link--current">
-                    <svg class="contact__icon" width="16" height="12">
-                        <use href="./img/icon.svg#icon-envelope"></use>
-                    </svg>
-                    info@example.com
-                </a>
-            </li>
-            <li class="contact__item">
-                <a href="tel:+380961111111" class="contact__link">
-                    <svg class="contact__icon" width="10" height="16">
-                        <use href="./img/icon.svg#icon-smartphone"></use>
-                    </svg>
-                    +38 096 111 11 11</a>
-            </li>
-        </ul>
+            <ul class="menu">
+                <li class="menu__item">
+                    <a href="#" class="menu__link">Instagram</a>
+                </li>
+                <li class="menu__item"> <span class="menu__line"></span></li>
+                <li class="menu__item">
+                    <a href="#" class="menu__link">Twitter</a>
+                </li>
+                <li class="menu__item"><span class="menu__line"></span></li>
+                <li class="menu__item">
+                    <a href="#" class="menu__link">Facebook</a>
+                </li>
+                <li class="menu__item"><span class="menu__line"></span></li>
+                <li class="menu__item">
+                    <a href="#" class="menu__link">LinkedIn</a>
+                </li>
+            </ul>
+        </div>
     </div>
-
 </header>
     <main>
         <!--Наши проекты-->
@@ -78,7 +106,18 @@
                 <li class="project__item">
                     <a class="project__link" href="/">
                         <div class="project__box">
-                    <img class="project__img" src="./img/techno.png" alt="Технокряк" width="370" />
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="
+                                ./img/portfolio/pc/project1.jpg   1x,
+                                ./img/portfolio/pc/project12x.jpg 2x" type="img/jpg" />
+                                <source media="(min-width: 768px) and (max-width:1199px)" srcset="
+                                ./img/portfolio/tablet/project1.jpg   1x,
+                                ./img/portfolio/tablet/project12x.jpg 2x" type="image/jpg" />
+                                <source media="(max-width: 767px)" srcset="
+                                ./img/portfolio/mobile/project1.jpg    1x,
+                                ./img/portfolio/mobile/project12x.jpg 2x" type="image/jpg" />
+                    <img class="project__img" src="./img/techno.png" alt="Технокряк"/>
+                    </picture>
                     <p class="project__description">
                         Технокряк это современная площадка распространения коронавируса. Компании
                         используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -94,8 +133,19 @@
                 <li class="project__item">
                     <a class="project__link" href="/">
                         <div class="project__box">
-                    <img class="project__img" src="./img/ball.png" alt="Постер New Orlean vs Golden Star" width="370" />
-                    <p class="project__description">
+                     <picture>
+                               <source media="(min-width: 1200px)" srcset="
+                               ./img/portfolio/pc/project2.jpg   1x,
+                               ./img/portfolio/pc/project22x.jpg 2x" type="image/jpg" />
+                               <source media="(min-width: 768px) and (max-width:1199px)" srcset="
+                               ./img/portfolio/tablet/project2.jpg   1x,
+                               ./img/portfolio/tablet/project22x.jpg 2x" type="image/jpg" />
+                               <source media="(max-width: 767px)" srcset="
+                                ./img/portfolio/mobile/project2.jpg    1x,
+                                ./img/portfolio/mobile/project2-2x.jpg 2x" type="image/jpg" />
+                            <img class="project__img" src="./img/ball.png" alt="Постер New Orlean vs Golden Star" />
+                   </picture>
+                            <p class="project__description">
                         Технокряк это современная площадка распространения коронавируса. Компании
                         используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                         конкурентов.
@@ -110,7 +160,18 @@
                 <li class="project__item">
                     <a class="project__link" href="/">
                         <div class="project__box">
-                    <img  class="project__img" src="./img/4.png" alt="Ресторан Seafood" width="370" />
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="
+                                ./img/portfolio/pc/project3.jpg   1x,
+                                ./img/portfolio/pc/project32x.jpg 2x" type="image/jpg" />
+                                <source media="(min-width: 768px) and (max-width:1199px)" srcset="
+                                ./img/portfolio/tablet/project3.jpg   1x,
+                                ./img/portfolio/tablet/project32x.jpg 2x" type="image/jpg" />
+                                <source media="(max-width: 767px)" srcset="
+                                ./img/portfolio/mobile/project3.jpg    1x,
+                                ./img/portfolio/mobile/project3-2x.jpg 2x" type="image/jpg" />
+                            <img  class="project__img" src="./img/4.png" alt="Ресторан Seafood" />
+                        </picture>
                     <p class="project__description">
                         Технокряк это современная площадка распространения коронавируса. Компании
                         используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -126,7 +187,18 @@
                 <li class="project__item">
                     <a class="project__link" href="/">
                         <div class="project__box">
-                    <img class="project__img" src="./img/5.png" alt="Проект Prime" width="370" />
+                    <picture>
+                              <source media="(min-width: 1200px)" srcset="
+                              ./img/portfolio/pc/project4.jpg   1x,
+                              ./img/portfolio/pc/project42x.jpg" type="image/jpg" />
+                              <source media="(min-width: 768px) and (max-width:1199px)" srcset="
+                              ./img/portfolio/tablet/project4.jpg   1x,
+                              ./img/portfolio/tablet/project42x.jpg 2x" type="image/jpg" />
+                              <source media="(max-width: 767px)" srcset="
+                              ./img/portfolio/mobile/project4.jpg    1x,
+                              ./img/portfolio/mobile/project4-2x.jpg 2x" type="image/jpg" />
+                            <img class="project__img" src="./img/5.png" alt="Проект Prime" />
+                    </picture>
                     <p class="project__description">
                         Технокряк это современная площадка распространения коронавируса. Компании
                         используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -142,7 +214,18 @@
                 <li class="project__item">
                     <a class="project__link" href="/">
                         <div class="project__box">
-                    <img class="project__img" src="./img/6.png" alt="Проект Boxes" width="370" />
+                        <picture>
+                                <source media="(min-width: 1200px)" srcset="
+                                ./img/portfolio/pc/project5.jpg   1x,
+                                ./img/portfolio/pc/project52x.jpg 2x" type="image/jpg" />
+                               <source media="(min-width: 768px) and (max-width:1199px)" srcset="
+                                ./img/portfolio/tablet/project5.jpg   1x,
+                                ./img/portfolio/tablet/project52x.jpg 2x" type="image/jpg" />
+                                <source media="(max-width: 767px)" srcset="
+                                ./img/portfolio/mobile/project5.jpg    1x,
+                                ./img/portfolio/mobile/project5-2x.jpg 2x" type="image/jpg" />
+                            <img class="project__img" src="./img/6.png" alt="Проект Boxes"  />
+                        </picture>
                     <p class="project__description">
                         Технокряк это современная площадка распространения коронавируса. Компании
                         используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -158,7 +241,18 @@
                 <li class="project__item">
                     <a class="project__link" href="/">
                         <div class="project__box">
-                    <img class="project__img" src="./img/7.png" alt="Inspiration has no Borders" width="370" />
+                                <picture>
+                                    <source media="(min-width: 1200px)" srcset="
+                                    ./img/portfolio/pc/project6.jpg   1x,
+                                    ./img/portfolio/pc/project62x.jpg 2x" type="image/jpg" />
+                                    <source media="(min-width: 768px) and (max-width:1199px)" srcset="
+                                    ./img/portfolio/tablet/project6.jpg   1x,
+                                    ./img/portfolio/tablet/project62x.jpg 2x" type="image/jpg" />
+                                    <source media="(max-width: 767px)" srcset="
+                                    ./img/portfolio/mobile/project6.jpg    1x,
+                                    ./img/portfolio/mobile/project6-2x.jpg 2x" type="image/jpg" />
+                            <img class="project__img" src="./img/7.png" alt="Inspiration has no Borders"  />
+                                </picture>
                     <p class="project__description">
                         Технокряк это современная площадка распространения коронавируса. Компании
                         используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -174,7 +268,18 @@
                 <li class="project__item">
                     <a class="project__link" href="/">
                         <div class="project__box">
-                    <img class="project__img" src="./img/8.png" alt="Издание Limited Edition" width="370" />
+                                <picture>
+                                    <source media="(min-width: 1200px)" srcset="
+                                    ./img/portfolio/pc/project7.jpg   1x,
+                                    ./img/portfolio/pc/project72x.jpg 2x" type="image/jpg" />
+                                    <source media="(min-width: 768px) and (max-width:1199px)" srcset="
+                                    ./img/portfolio/tablet/project7.jpg   1x,
+                                    ./img/portfolio/tablet/project72x.jpg 2x" type="image/jpg" />
+                                    <source media="(max-width: 767px)" srcset="
+                                    ./img/portfolio/mobile/project7.jpg    1x,
+                                    ./img/portfolio/mobile/project7-2x.jpg 2x" type="image/jpg" />
+                            <img class="project__img" src="./img/8.png" alt="Издание Limited Edition"  />
+                                </picture>
                     <p class="project__description">
                         Технокряк это современная площадка распространения коронавируса. Компании
                         используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -190,7 +295,21 @@
                 <li class="project__item">
                     <a class="project__link" href="/">
                         <div class="project__box">
-                    <img class="project__img" src="./img/9.png" alt="Проект LAB" width="370" />
+                <picture>
+                    <source media="(min-width: 1200px)" srcset="
+                                        ./img/portfolio/pc/project8.jpg   1x,
+                                        ./img/portfolio/pc/project82x.jpg 2x
+                                      " type="image/jpg" />
+                    <source media="(min-width: 768px) and (max-width:1199px)" srcset="
+                                        ./img/portfolio/tablet/project8.jpg   1x,
+                                        ./img/portfolio/tablet/project82x.jpg 2x
+                                      " type="image/jpg" />
+                    <source media="(max-width: 767px)" srcset="
+                                        ./img/portfolio/mobile/project8.jpg    1x,
+                                        ./img/portfolio/mobile/project8-2x.jpg 2x
+                                      " type="image/jpg" />
+                            <img class="project__img" src="./img/9.png" alt="Проект LAB" />
+                </picture>
                     <p class="project__description">
                         Технокряк это современная площадка распространения коронавируса. Компании
                         используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -206,7 +325,21 @@
                 <li class="project__item">
                     <a class="project__link" href="/">
                         <div class="project__box">
-                    <img class="project__img" src="./img/10.png" alt="Growing Business" width="370" />
+                    <picture>
+                        <source media="(min-width: 1200px)" srcset="
+                                            ./img/portfolio/pc/project9.jpg   1x,
+                                            ./img/portfolio/pc/project92x.jpg 2x
+                                          " type="image/jpg" />
+                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="
+                                            ./img/portfolio/tablet/project9.jpg   1x,
+                                            ./img/portfolio/tablet/project92x.jpg 2x
+                                          " type="image/jpg" />
+                        <source media="(max-width: 767px)" srcset="
+                                            ./img/portfolio/mobile/project9.jpg    1x,
+                                            ./img/portfolio/mobile/project9-2x.jpg 2x
+                                          " type="image/jpg" />
+                            <img class="project__img" src="./img/10.png" alt="Growing Business"  />
+                    </picture>
                     <p class="project__description">
                         Технокряк это современная площадка распространения коронавируса. Компании
                         используют эту платформу для цифрового шпионажа и атак на защищённые сервера
@@ -290,6 +423,7 @@
                 </form>
             </div>
     </footer>
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
