--- a/index.html
+++ b/index.html
@@ -409,42 +409,42 @@
                 <ul class="company">
                     <li class="company__item">
                       <a href="#" class="company__link">  
-                 <svg class="company__icon">
+                 <svg class="company__icon" width="106" height="60">
                   <use href="./img/icon.svg#icon-group"></use>
                  </svg>
                  </a>
                  </li>
                 <li class="company__item">
                       <a href="#" class="company__link">  
-                 <svg class="company__icon">
+                 <svg class="company__icon" width="106" height="60">
                   <use href="./img/icon.svg#icon-group-2"></use>
                  </svg>
                  </a>
                  </li>
                 <li class="company__item">
                       <a href="#" class="company__link">  
-                 <svg class="company__icon">
+                 <svg class="company__icon" width="106" height="60">
                   <use href="./img/icon.svg#icon-group-3"></use>
                  </svg>
                  </a>
                  </li>
                 <li class="company__item">
                       <a href="#" class="company__link">  
-                 <svg class="company__icon">
+                 <svg class="company__icon" width="106" height="60">
                   <use href="./img/icon.svg#icon-group-4"></use>
                  </svg>
                  </a>
                  </li>
                 <li class="company__item">
                       <a href="#" class="company__link">  
-                 <svg class="company__icon">
+                 <svg class="company__icon" width="106" height="60">
                   <use href="./img/icon.svg#icon-group-5"></use>
                  </svg>
                  </a>
                  </li>
                 <li class="company__item">
                       <a href="#" class="company__link">  
-                 <svg class="company__icon">
+                 <svg class="company__icon" width="106" height="60">
                   <use href="./img/icon.svg#icon-group-6"></use>
                  </svg>
                  </a>
@@ -591,7 +591,7 @@
                         type="checkbox" 
                         name="policy" 
                         id="policy" />
-                        <svg class="form-feedback__image" width="11" height="8">
+                        <svg class="form-feedback__image" width="16" height="15">
                             <use href="img/icon.svg#check"></use>
                         </svg>
                         <span>Соглашаюсь с рассылкой и принимаю<a class="form-feedback__link" href="#"> Условия договора</a>
