--- a/portfolio.html
+++ b/portfolio.html
@@ -359,7 +359,7 @@
     <footer class="footer">
         <div class="container container__footer">
             <div class="address__block">
-                <a href="./index.html" class="header__logo">Web<span class="logo__second--color">Studio</span></a>
+                <a href="./index.html" class="header__logo">Web<span class="logo__white">Studio</span></a>
                 </p>
                 <address class="address">
                     <ul class="address__section">
@@ -409,8 +409,8 @@
                 </ul>
             </div>
             <div class="subscribe">
-                <h3 class="network__title">Подпишитесь на рассылку</h3>
-                <form class="footer__form">
+                <h3 class="subscribe__title">Подпишитесь на рассылку</h3>
+                <form class="subscribe__form">
                     <label for="mail">
                         <input class="subscribe__mail" type="email" name="mail" id="mail" placeholder="E-mail" />
                     </label>
