--- a/index.html
+++ b/index.html
@@ -457,7 +457,6 @@
         <div class="container container__footer">
            <div class="address__block">
                 <a href="./index.html" class="header__logo">Web<span class="logo__white">Studio</span></a>
-            </p>
             <address class="address">
                 <ul class="address__section">
                     <li class="address__item">
@@ -524,6 +523,7 @@
          </svg>
         </button>
     </form>
+        </div>
         </div>
     </footer>
 
