--- a/portfolio.html
+++ b/portfolio.html
@@ -190,13 +190,13 @@
                     <picture>
                               <source media="(min-width: 1200px)" srcset="
                               ./img/portfolio/pc/project4.jpg   1x,
-                              ./img/portfolio/pc/project42x.jpg" type="image/jpg" />
+                              ./img/portfolio/pc/project42x.jpg  2x" type="img/jpg" />
                               <source media="(min-width: 768px) and (max-width:1199px)" srcset="
                               ./img/portfolio/tablet/project4.jpg   1x,
-                              ./img/portfolio/tablet/project42x.jpg 2x" type="image/jpg" />
+                              ./img/portfolio/tablet/project42x.jpg 2x" type="img/jpg" />
                               <source media="(max-width: 767px)" srcset="
                               ./img/portfolio/mobile/project4.jpg    1x,
-                              ./img/portfolio/mobile/project4-2x.jpg 2x" type="image/jpg" />
+                              ./img/portfolio/mobile/project4-2x.jpg 2x" type="img/jpg" />
                             <img class="project__img" src="./img/5.png" alt="Проект Prime" />
                     </picture>
                     <p class="project__description">
@@ -360,7 +360,6 @@
         <div class="container container__footer">
             <div class="address__block">
                 <a href="./index.html" class="header__logo">Web<span class="logo__white">Studio</span></a>
-                </p>
                 <address class="address">
                     <ul class="address__section">
                         <li class="address__item">
@@ -421,6 +420,7 @@
                         </svg>
                     </button>
                 </form>
+            </div>
             </div>
     </footer>
     <script src="./js/menu.js"></script>
