--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
             </svg>
         </button>
         <div class="mobile-menu js-menu-container">
-            <button class="mobile-menu__close js-close-menu" type="button" aria-expanded="false" aria-controls="menu">
+            <button class="mobile-menu__close js-close-menu" type="button" aria-expanded="false">
                 <svg class="menu-icon" width="19" height="19" aria-label="Меню">
                     <use class="menu-close" href="./img/icon.svg#icon-close_24px-1"></use>
                 </svg>
