--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
                     </a>
                 </li>
                 <li class="contact__item">
-                    <a href="tel:+380961111111" class="contact__link">
+                    <a href="tel:+380961111111" class=" contact__link contact__link-hover">
                         <svg class="contact__icon" width="10" height="16">
                             <use href="./img/icon.svg#icon-smartphone"></use>
                         </svg>
