--- a/index.html
+++ b/index.html
@@ -458,15 +458,15 @@
            <div class="address__block">
                 <a href="./index.html" class="header__logo">Web<span class="logo__white">Studio</span></a>
             <address class="address">
-                <ul class="address__section">
+                <ul class="address__list">
                     <li class="address__item">
                         <a href="" class="address__map">г. Киев, пр-т Леси Украинки, 26</a>
                     </li>
                     <li class="address__item">
-                        <a href="mailto:info@example.com" class="address__text">info@example.com</a>
+                        <a href="mailto:info@example.com" class="address__contact">info@example.com</a>
                     </li>
                     <li class="address__item">
-                        <a href="tel:+380991111111" class="address__text">+38 099 111 11 11</a>
+                        <a href="tel:+380991111111" class="address__contact">+38 099 111 11 11</a>
                     </li>
                 </ul>
             </address>
