--- a/index.html
+++ b/index.html
@@ -189,17 +189,17 @@
                             ./img/team/pc/igor1x.jpg  1x,
                             ./img/team/pc/igor2x.jpg  2x" 
                             media="(min-width: 1200px)" 
-                            type="img/jpg"/>
+                            type="image/jpg"/>
                             <source srcset="
                             ./img/team/tablet/igor1x.jpg  1x,
                             ./img/team/tablet/igor2x.jpg  2x" 
                             media="(min-width: 768px) and (max-width: 1199px)" 
-                            type="img/jpg" />
+                            type="image/jpg" />
                             <source srcset="
                             ./img/team/mobile/igor1x.jpg  1x,
                             ./img/team/mobile/igor2x.jpg  2x" 
                             media="(max-width: 767px)"
-                            type="img/jpg" />
+                            type="image/jpg" />
                         <img class="team_image" src="./img/Product.jpg" alt="Product designer" width="450" />
                         </picture>
                         <div class="team__meta">
@@ -243,17 +243,17 @@
                             ./img/team/pc/olga1x.jpg  1x,
                             ./img/team/pc/olga2x.jpg  2x" 
                             media="(min-width: 1200px)" 
-                            type="img/jpg" />
+                            type="image/jpg" />
                             <source srcset="
                             ./img/team/tablet/olga1x.jpg  1x,
                             ./img/team/tablet/olga2x.jpg  2x" 
                             media="(min-width: 768px) and (max-width: 1199px)"
-                            type="img/jpg" />
+                            type="image/jpg" />
                             <source srcset="
                             ./img/team/mobile/olga1x.jpg  1x,
                             ./img/team/mobile/olga2x.jpg  2x" 
                             media="(max-width: 767px)" 
-                            type="img/jpg" />
+                            type="image/jpg" />
                             <img class="team__image" src="./img/frontend.jpg" alt="Frontend developer" width="450" />
                         </picture>
                         <div class="team__meta">
@@ -297,17 +297,17 @@
                             ./img/team/pc/kolya1x.jpg  1x,
                             ./img/team/pc/kolya2x.jpg  2x" 
                             media="(min-width: 1200px)" 
-                            type="img/jpg" />
+                            type="image/jpg" />
                             <source srcset="
                             ./img/team/tablet/kolya1x.jpg  1x,
                             ./img/team/tablet/kolya2x.jpg  2x" 
                             media="(min-width: 768px) and (max-width: 1199px)"
-                            type="img/jpg" />
+                            type="image/jpg" />
                             <source srcset="
                             ./img/team/mobile/kolya1x.jpg  1x,
                             ./img/team/mobile/kolya2x.jpg  2x" 
                             media="(max-width: 767px)" 
-                            type="img/jpg" />
+                            type="image/jpg" />
                             <img class="team__image" src="./img/marketing.jpg" alt="Marketing" width="450" />
                         </picture>
                         <div class="team__meta">
@@ -351,17 +351,17 @@
                             ./img/team/pc/misha1x.jpg  1x,
                             ./img/team/pc/misha2x.jpg  2x" 
                             media="(min-width: 1200px)" 
-                            type="img/jpg" />
+                            type="image/jpg" />
                             <source srcset="
                             ./img/team/tablet/misha1x.jpg  1x,
                             ./img/team/tablet/misha2x.jpg  2x" 
                             media="(min-width: 768px) and (max-width: 1199px)"
-                            type="img/jpg" />
+                            type="image/jpg" />
                             <source srcset="
                             ./img/team/mobile/misha1x.jpg  1x,
                             ./img/team/mobile/misha2x.jpg  2x" 
                             media="(max-width: 767px)" 
-                            type="img/jpg" />
+                            type="image/jpg" />
                         <img class="team__image" src="./img/UI.jpg" alt="UI Designer" width="450" />
                         </picture>
                         <div class="team__meta">
