--- a/portfolio.html
+++ b/portfolio.html
@@ -109,13 +109,13 @@
                             <picture>
                                 <source media="(min-width: 1200px)" srcset="
                                 ./img/portfolio/pc/project1.jpg   1x,
-                                ./img/portfolio/pc/project12x.jpg 2x" type="img/jpg" />
+                                ./img/portfolio/pc/project12x.jpg 2x" type="image/jpg" />
                                 <source media="(min-width: 768px) and (max-width:1199px)" srcset="
                                 ./img/portfolio/tablet/project1.jpg   1x,
-                                ./img/portfolio/tablet/project12x.jpg 2x" type="img/jpg" />
+                                ./img/portfolio/tablet/project12x.jpg 2x" type="image/jpg" />
                                 <source media="(max-width: 767px)" srcset="
                                 ./img/portfolio/mobile/project1.jpg    1x,
-                                ./img/portfolio/mobile/project12x.jpg 2x" type="img/jpg" />
+                                ./img/portfolio/mobile/project12x.jpg 2x" type="image/jpg" />
                     <img class="project__img" src="./img/portfolio/pc/project1.jpg" alt="Технокряк"/>
                     </picture>
                     <p class="project__description">
@@ -136,13 +136,13 @@
                      <picture>
                                <source media="(min-width: 1200px)" srcset="
                                ./img/portfolio/pc/project2.jpg   1x,
-                               ./img/portfolio/pc/project22x.jpg 2x" type="img/jpg" />
+                               ./img/portfolio/pc/project22x.jpg 2x" type="image/jpg" />
                                <source media="(min-width: 768px) and (max-width:1199px)" srcset="
                                ./img/portfolio/tablet/project2.jpg   1x,
-                               ./img/portfolio/tablet/project22x.jpg 2x" type="img/jpg" />
+                               ./img/portfolio/tablet/project22x.jpg 2x" type="image/jpg" />
                                <source media="(max-width: 767px)" srcset="
                                 ./img/portfolio/mobile/project2.jpg    1x,
-                                ./img/portfolio/mobile/project2-2x.jpg 2x" type="img/jpg" />
+                                ./img/portfolio/mobile/project2-2x.jpg 2x" type="image/jpg" />
                             <img class="project__img" src="./img/portfolio/pc/project2.jpg" alt="Постер New Orlean vs Golden Star" />
                    </picture>
                             <p class="project__description">
@@ -163,13 +163,13 @@
                             <picture>
                                 <source media="(min-width: 1200px)" srcset="
                                 ./img/portfolio/pc/project3.jpg   1x,
-                                ./img/portfolio/pc/project32x.jpg 2x" type="img/jpg" />
+                                ./img/portfolio/pc/project32x.jpg 2x" type="image/jpg" />
                                 <source media="(min-width: 768px) and (max-width:1199px)" srcset="
                                 ./img/portfolio/tablet/project3.jpg   1x,
-                                ./img/portfolio/tablet/project32x.jpg 2x" type="img/jpg" />
+                                ./img/portfolio/tablet/project32x.jpg 2x" type="image/jpg" />
                                 <source media="(max-width: 767px)" srcset="
                                 ./img/portfolio/mobile/project3.jpg    1x,
-                                ./img/portfolio/mobile/project3-2x.jpg 2x" type="img/jpg" />
+                                ./img/portfolio/mobile/project3-2x.jpg 2x" type="image/jpg" />
                             <img  class="project__img" src="./img/portfolio/pc/project3.jpg" alt="Ресторан Seafood" />
                         </picture>
                     <p class="project__description">
@@ -190,13 +190,13 @@
                     <picture>
                               <source media="(min-width: 1200px)" srcset="
                               ./img/portfolio/pc/project4.jpg   1x,
-                              ./img/portfolio/pc/project42x.jpg  2x" type="img/jpg" />
+                              ./img/portfolio/pc/project42x.jpg  2x" type="image/jpg" />
                               <source media="(min-width: 768px) and (max-width:1199px)" srcset="
                               ./img/portfolio/tablet/project4.jpg   1x,
-                              ./img/portfolio/tablet/project42x.jpg 2x" type="img/jpg" />
+                              ./img/portfolio/tablet/project42x.jpg 2x" type="image/jpg" />
                               <source media="(max-width: 767px)" srcset="
                               ./img/portfolio/mobile/project4.jpg    1x,
-                              ./img/portfolio/mobile/project4-2x.jpg 2x" type="img/jpg" />
+                              ./img/portfolio/mobile/project4-2x.jpg 2x" type="image/jpg" />
                             <img class="project__img" src="./img/portfolio/pc/project4.jpg" alt="Проект Prime" />
                     </picture>
                     <p class="project__description">
@@ -217,13 +217,13 @@
                         <picture>
                                 <source media="(min-width: 1200px)" srcset="
                                 ./img/portfolio/pc/project5.jpg   1x,
-                                ./img/portfolio/pc/project52x.jpg 2x" type="img/jpg" />
+                                ./img/portfolio/pc/project52x.jpg 2x" type="image/jpg" />
                                <source media="(min-width: 768px) and (max-width:1199px)" srcset="
                                 ./img/portfolio/tablet/project5.jpg   1x,
-                                ./img/portfolio/tablet/project52x.jpg 2x" type="img/jpg" />
+                                ./img/portfolio/tablet/project52x.jpg 2x" type="image/jpg" />
                                 <source media="(max-width: 767px)" srcset="
                                 ./img/portfolio/mobile/project5.jpg    1x,
-                                ./img/portfolio/mobile/project5-2x.jpg 2x" type="img/jpg" />
+                                ./img/portfolio/mobile/project5-2x.jpg 2x" type="image/jpg" />
                             <img class="project__img" src="./img/portfolio/pc/project5.jpg" alt="Проект Boxes"  />
                         </picture>
                     <p class="project__description">
@@ -244,13 +244,13 @@
                                 <picture>
                                     <source media="(min-width: 1200px)" srcset="
                                     ./img/portfolio/pc/project6.jpg   1x,
-                                    ./img/portfolio/pc/project62x.jpg 2x" type="img/jpg" />
+                                    ./img/portfolio/pc/project62x.jpg 2x" type="image/jpg" />
                                     <source media="(min-width: 768px) and (max-width:1199px)" srcset="
                                     ./img/portfolio/tablet/project6.jpg   1x,
-                                    ./img/portfolio/tablet/project62x.jpg 2x" type="img/jpg" />
+                                    ./img/portfolio/tablet/project62x.jpg 2x" type="image/jpg" />
                                     <source media="(max-width: 767px)" srcset="
                                     ./img/portfolio/mobile/project6.jpg    1x,
-                                    ./img/portfolio/mobile/project6-2x.jpg 2x" type="img/jpg" />
+                                    ./img/portfolio/mobile/project6-2x.jpg 2x" type="image/jpg" />
                             <img class="project__img" src="./img/portfolio/pc/project6.jpg" alt="Inspiration has no Borders"  />
                                 </picture>
                     <p class="project__description">
@@ -271,13 +271,13 @@
                                 <picture>
                                     <source media="(min-width: 1200px)" srcset="
                                     ./img/portfolio/pc/project7.jpg   1x,
-                                    ./img/portfolio/pc/project72x.jpg 2x" type="img/jpg" />
+                                    ./img/portfolio/pc/project72x.jpg 2x" type="image/jpg" />
                                     <source media="(min-width: 768px) and (max-width:1199px)" srcset="
                                     ./img/portfolio/tablet/project7.jpg   1x,
-                                    ./img/portfolio/tablet/project72x.jpg 2x" type="img/jpg" />
+                                    ./img/portfolio/tablet/project72x.jpg 2x" type="image/jpg" />
                                     <source media="(max-width: 767px)" srcset="
                                     ./img/portfolio/mobile/project7.jpg    1x,
-                                    ./img/portfolio/mobile/project7-2x.jpg 2x" type="img/jpg" />
+                                    ./img/portfolio/mobile/project7-2x.jpg 2x" type="image/jpg" />
                             <img class="project__img" src="./img/portfolio/pc/project7.jpg" alt="Издание Limited Edition"  />
                                 </picture>
                     <p class="project__description">
@@ -299,15 +299,15 @@
                     <source media="(min-width: 1200px)" srcset="
                                         ./img/portfolio/pc/project8.jpg   1x,
                                         ./img/portfolio/pc/project82x.jpg 2x
-                                      " type="img/jpg" />
+                                      " type="image/jpg" />
                     <source media="(min-width: 768px) and (max-width:1199px)" srcset="
                                         ./img/portfolio/tablet/project8.jpg   1x,
                                         ./img/portfolio/tablet/project82x.jpg 2x
-                                      " type="img/jpg" />
+                                      " type="image/jpg" />
                     <source media="(max-width: 767px)" srcset="
                                         ./img/portfolio/mobile/project8.jpg    1x,
                                         ./img/portfolio/mobile/project8-2x.jpg 2x
-                                      " type="img/jpg" />
+                                      " type="image/jpg" />
                             <img class="project__img" src="./img/portfolio/pc/project8.jpg" alt="Проект LAB" />
                 </picture>
                     <p class="project__description">
@@ -329,15 +329,15 @@
                         <source media="(min-width: 1200px)" srcset="
                                             ./img/portfolio/pc/project9.jpg   1x,
                                             ./img/portfolio/pc/project92x.jpg 2x
-                                          " type="img/jpg" />
+                                          " type="image/jpg" />
                         <source media="(min-width: 768px) and (max-width:1199px)" srcset="
                                             ./img/portfolio/tablet/project9.jpg   1x,
                                             ./img/portfolio/tablet/project92x.jpg 2x
-                                          " type="img/jpg" />
+                                          " type="image/jpg" />
                         <source media="(max-width: 767px)" srcset="
                                             ./img/portfolio/mobile/project9.jpg    1x,
                                             ./img/portfolio/mobile/project9-2x.jpg 2x
-                                          " type="img/jpg" />
+                                          " type="image/jpg" />
                             <img class="project__img" src="./img/portfolio/pc/project9.jpg" alt="Growing Business"  />
                     </picture>
                     <p class="project__description">
