--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <!--Наши преимущества-->
         <section class="section">
             <div class="container">
-                <h2 class="hide">Наши преимущества</h2>
+                <h2 class="section__title section__title--hiden">Наши преимущества</h2>
                 <ul class="benefits">
                     <li class="benefits__item">
                         <div class="benefits__container">
